--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,11 +19,11 @@ jobs:
         node-version: '20'
 
     - name: Install frontend dependencies
-      working-directory: ./frontend
+      working-directory: frontend
       run: npm ci
 
     - name: Build Vue app
-      working-directory: ./frontend
+      working-directory: frontend
       run: npm run build
 
 #    - name: Copy dist to backend/public
