--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,14 +33,11 @@ jobs:
 #        cp -r frontapp/dist/* backend/public/
 
     - name: SSH into server and deploy
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          cd /home/ubuntu/project
-          git pull origin main
-          npm install --prefix backend
-          pm2 restart app || pm2 start backend/app.js --name "app"
-          pm2 save
+      run: |
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+            cd ~/project
+            git pull origin main
+            npm install --prefix backapp
+            pm2 restart backapp || pm2 start backapp/index.js --name "backapp"
+            pm2 save
+          EOF
