--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,7 +24,9 @@ jobs:
 
     - name: Build Vue app
       working-directory: frontapp
-      run: npm run build
+      run: |
+        npm ci
+        npm run build
 
 #    - name: Copy dist to backend/public
 #      run: |
@@ -37,14 +39,16 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
- #         ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-          
+
+    # 서버에 접속하여 배포 실행          
     - name: SSH into server and deploy
       run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no   \
+              ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
             cd ~/project
             git pull origin main
-            npm install --prefix backend
-            pm2 restart app || pm2 start backend/index.js --name "app"
+            cd backend
+            npm ci
+            pm2 restart app || pm2 start app.js --name "app"
             pm2 save
-          EOF
+EOF
