--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,5 +43,4 @@ jobs:
     # 서버에 접속하여 배포 실행          
     - name: SSH into server and deploy
       run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no   \
-              ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}  sh ~/start.sh
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no  ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}  sh ~/start.sh
