--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,10 +1,16 @@
 name: Build Vue and Deploy Node App
 
-on:
-  push:
-    branches:
-      - main 
+#on:
+#  push:
+#    branches:
+#      - main 
 
+on:
+  pull_request:
+    types: [closed]
+    branches:
+      - main
+      
 jobs:
   deploy:
     runs-on: ubuntu-latest
