--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,7 +10,10 @@ on:
     types: [closed]
     branches:
       - main
-      
+  push:
+    branches:
+      - main 
+          
 jobs:
   deploy:
     runs-on: ubuntu-latest
