--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,9 +10,6 @@ on:
     types: [closed]
     branches:
       - main
-  push:
-    branches:
-      - main 
           
 jobs:
   deploy:
@@ -37,12 +34,6 @@ jobs:
         npm ci
         npm run build
 
-#    - name: Copy dist to backend/public
-#      run: |
-#        rm -rf backend/public
-#        mkdir -p backend/public
-#        cp -r frontapp/dist/* backend/public/
-
     - name: Setup SSH key
       run: |
           mkdir -p ~/.ssh
@@ -52,6 +43,7 @@ jobs:
     # 서버에 접속하여 배포 실행          
     - name: SSH into server and deploy
       run: |
+        scp   -r -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no frontapp/dist/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/project/backend/public/      
         ssh -vvv -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no  ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
             cd ~/project
             git pull origin main
