--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "puppeteer": "^24.8.2"
+    "puppeteer": "^24.10.1"
   }
 }
