--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,14 +43,14 @@ jobs:
     # 서버에 접속하여 배포 실행          
     - name: SSH into server and deploy
       run: |
-        scp   -r -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no frontapp/dist/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/${{ secrets.SSH_USER }}/deploy_node/backend/public/
-        ssh -vvv -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no  ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+        scp   -r -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -P ${{ secrets.SSH_PORT }} frontapp/dist/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/${{ secrets.SSH_USER }}/deploy_node/backend/public/
+        ssh -vvv -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }}  ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
             cd ~/deploy_node
             git pull origin main
             cd backend
-            npm ci
-            export PATH=$PATH:/root/.nvm/versions/node/v22.14.0 pm2 restart app || pm2 start app.js --name "app" > pm2Logs.log
-            export PATH=$PATH:/root/.nvm/versions/node/v22.14.0 pm2 save > pm2Save.log
+            npm ci            
+            pm2 restart app || pm2 start app.js --name "app"
+            pm2 save
           EOF
 
         echo '== build end ==='
