--- a/.github/workflows/deploy_project.yaml
+++ b/.github/workflows/deploy_project.yaml
@@ -24,13 +24,13 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20'
+        node-version: '22'
 
     # 임시 서버인 ubuntu-latest 에 client 폴더 안에서 지정한 명령어 수행
     - name: Build Vue app
       working-directory: client
       run: |
-        npm ci
+        npm i
         npm run build
         
     # github actions 에 저장된 private key를 ubuntu에 복사
