Update npm ci command to include flags

--- a/.github/workflows/deploy_project.yaml
+++ b/.github/workflows/deploy_project.yaml
@@ -48,7 +48,7 @@ jobs:
             cd ~/deploy_project
             git pull origin main
             cd server
-            npm ci            
+            npm ci --no-audit --no-fund
             pm2 restart app || pm2 start app.js --name "app"
             pm2 save
           EOF
