--- a/.github/workflows/deploy_project.yaml
+++ b/.github/workflows/deploy_project.yaml
@@ -18,11 +18,11 @@ jobs:
     steps:
     # 임시 서버인 ubuntu-latest 에 현재 git repository 정보 반영
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
 
     # 임시 서버인 ubuntu-latest 에 node를 설치
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v6
       with:
         node-version: '22'
 
@@ -30,7 +30,7 @@ jobs:
     - name: Build Vue app
       working-directory: client
       run: |
-        npm i
+        npm i --no-audit --no-fund
         npm run build
         
     # github actions 에 저장된 private key를 ubuntu에 복사
